refactor: use Stream.toList